# soyuz

./: .gitignore  Cargo.toml  README.md  SOYUZ_COOKBOOK.md
.github/workflows/: ci.yml  release.yml
app/: Cargo.toml
app/assets/: export-window.css  style.css  theme.css
app/src/: browser.rs  command_palette.rs  cookbook_panel.rs  export.rs  js_interop.rs  main.rs  markdown_panel.rs  pane.rs  preview.rs  preview_runner.rs  session.rs  settings.rs  settings_panel.rs  state.rs  statusbar.rs  terminal.rs  terminal_layer.rs  toolbar.rs  viewport.rs
app/src/browser/: mod.rs  tree.rs
app/src/state/: editor.rs  export.rs  mod.rs  preview.rs  terminal.rs  undo.rs
assets/: soyuz-studio.desktop
crates/soyuz-cli/: Cargo.toml
crates/soyuz-cli/src/: main.rs  repl.rs
crates/soyuz-core/: Cargo.toml
crates/soyuz-core/src/: error.rs  lib.rs
crates/soyuz-core/src/export/: gltf_export.rs  mod.rs  obj.rs  stl.rs
crates/soyuz-core/src/material/: mod.rs
crates/soyuz-core/src/mesh/: lod.rs  marching_cubes.rs  mod.rs  optimize.rs
crates/soyuz-core/src/sdf/: mod.rs  operations.rs  primitives.rs  transforms.rs
crates/soyuz-core/src/texture/: mod.rs  noise.rs  ops.rs  pattern.rs
crates/soyuz-engine/: Cargo.toml
crates/soyuz-engine/src/: export.rs  lib.rs  preview.rs  scene.rs  watch.rs
crates/soyuz-math/: Cargo.toml  build.rs
crates/soyuz-math/formulas/: repeat_polar.toml
crates/soyuz-math/src/: lib.rs
crates/soyuz-mcp/: Cargo.toml
crates/soyuz-mcp/src/: camera.rs  lib.rs  main.rs  state.rs
crates/soyuz-mcp/src/tools/: discovery.rs  export.rs  mod.rs  render.rs  script.rs
crates/soyuz-render/: Cargo.toml
crates/soyuz-render/src/: camera.rs  embedded.rs  lib.rs  raymarcher.rs  shader_gen.rs  text_overlay.rs  watch_window.rs  window.rs
crates/soyuz-script/: Cargo.toml
crates/soyuz-script/src/: cpu_eval.rs  engine.rs  env_api.rs  lib.rs  sdf_api.rs  watcher.rs
crates/soyuz-script/tests/: integration.rs
crates/soyuz-sdf/: Cargo.toml
crates/soyuz-sdf/src/: environment.rs  lib.rs  sdf_op.rs  wgsl_gen.rs
crates/soyuz-sdf/src/shaders/: raymarch.wgsl
crates/soyuz-wasm/: Cargo.toml
crates/soyuz-wasm/src/: lib.rs
examples/: barrel.rhai  donut.rhai  gear.rhai  lattice.rhai  pistol.rhai  primitives.rhai  sci_fi_crate.rhai  test_preview.rhai  twisted_column.rhai
