[workspace]
resolver = "2"

members = [
    "crates/soyuz-math",
    "crates/soyuz-core",
    "crates/soyuz-render",
    "crates/soyuz-script",
    "crates/soyuz-cli",
    "app",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Noah Sabaj"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/noahsabaj/soyuz"
description = "Procedural asset generation through code"
keywords = ["procedural", "3d", "sdf", "gamedev", "assets"]
categories = ["game-development", "graphics", "rendering"]

[workspace.dependencies]
# Math
glam = "0.29"
nalgebra = "0.33"

# Noise
noise = "0.9"
fastnoise-lite = "1.1"

# Image handling
image = "0.25"

# 3D export
gltf = "1.4"

# GPU
wgpu = "25"
bytemuck = { version = "1.18", features = ["derive"] }
glyphon = "0.9"

# Scripting
rhai = "1.20"

# Desktop app
dioxus = { version = "0.7", features = ["desktop"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Async
tokio = { version = "1.41", features = ["full"] }
pollster = "0.4"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Utilities
rayon = "1.10"
parking_lot = "0.12"
notify = "7.0"
notify-debouncer-mini = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"

# REPL
rustyline = "14.0"

# Testing
approx = "0.5"
