[workspace]
resolver = "2"

members = [
    "crates/soyuz-math",
    "crates/soyuz-core",
    "crates/soyuz-sdf",
    "crates/soyuz-render",
    "crates/soyuz-script",
    "crates/soyuz-engine",
    "crates/soyuz-wasm",
    "app",
]

[workspace.package]
version = "0.4.0"
edition = "2024"
authors = ["Noah Sabaj"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/noahsabaj/soyuz"
description = "Procedural asset generation through code"
keywords = ["procedural", "3d", "sdf", "gamedev", "assets"]
categories = ["game-development", "graphics", "rendering"]

[workspace.dependencies]
# Math
glam = "0.29"

# Noise
noise = "0.9"

# Image handling
image = "0.25"

# 3D export
gltf = "1.4"

# GPU
wgpu = "25"
bytemuck = { version = "1.18", features = ["derive"] }
glyphon = "0.9"

# Scripting
rhai = "1.20"

# Desktop app
dioxus = { version = "0.7", features = ["desktop"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Async
tokio = { version = "1.41", features = ["fs", "time", "rt", "sync", "macros", "rt-multi-thread"] }
pollster = "0.4"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
rayon = "1.10"
parking_lot = "0.12"
notify = "7.0"
notify-debouncer-mini = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"

# REPL
rustyline = "14.0"

# Testing
approx = "0.5"

[workspace.lints.clippy]
# Set lower priority for lint groups so individual lints can override
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"

# Allow these pedantic lints that are too noisy
module_name_repetitions = "allow"
too_many_arguments = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"
similar_names = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
format_push_string = "allow"
doc_markdown = "allow"  # Type names in docs don't need backticks
return_self_not_must_use = "allow"  # Builder pattern methods
uninlined_format_args = "allow"  # Not always clearer
needless_raw_string_hashes = "allow"  # Raw strings can have hashes for consistency
unit_arg = "allow"  # Matching over () is fine
redundant_closure_for_method_calls = "allow"  # Closures are often clearer
used_underscore_binding = "allow"  # Underscore prefixes are intentional

[workspace.lints.rust]
unsafe_code = "warn"
