[package]
name = "soyuz-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors = ["Noah Sabaj"]
description = "Soyuz Desktop Application"

[[bin]]
name = "soyuz-studio"
path = "src/main.rs"

[dependencies]
soyuz-core = { path = "../crates/soyuz-core" }
soyuz-render = { path = "../crates/soyuz-render" }
soyuz-script = { path = "../crates/soyuz-script" }

dioxus = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# For file dialogs - use xdg-portal backend (works better with Dioxus)
rfd = { version = "0.15", default-features = false, features = ["tokio", "xdg-portal"] }

# For shared state between UI and preview
parking_lot = { workspace = true }

# For session persistence
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"

# For window icon
image = { version = "0.25", default-features = false, features = ["png"] }

[lints]
workspace = true

[package.metadata.deb]
name = "soyuz-studio"
maintainer = "Noah Sabaj"
copyright = "2024, Noah Sabaj"
extended-description = """
Soyuz Studio is a desktop IDE for procedural 3D asset generation.
Write scripts to define shapes using Signed Distance Fields (SDFs),
preview them in real-time, and export to common 3D formats.
"""
section = "graphics"
priority = "optional"
assets = [
    ["target/release/soyuz-studio", "usr/bin/", "755"],
    ["../assets/icons/icon-256.png", "usr/share/icons/hicolor/256x256/apps/soyuz-studio.png", "644"],
    ["../assets/icons/icon-128.png", "usr/share/icons/hicolor/128x128/apps/soyuz-studio.png", "644"],
    ["../assets/icons/icon-64.png", "usr/share/icons/hicolor/64x64/apps/soyuz-studio.png", "644"],
    ["../assets/icons/icon-48.png", "usr/share/icons/hicolor/48x48/apps/soyuz-studio.png", "644"],
    ["../assets/soyuz-studio.desktop", "usr/share/applications/soyuz-studio.desktop", "644"],
]

[package.metadata.wix]
upgrade-guid = "A1B2C3D4-E5F6-7890-ABCD-EF1234567890"
path-guid = "B2C3D4E5-F6A7-8901-BCDE-F23456789012"
license = false
eula = false
