# Soyuz MCP - Model Context Protocol server for procedural 3D asset generation
#
# Enables AI agents to programmatically generate 3D assets using Soyuz's SDF engine.
# Exposes tools for script execution, rendering, mesh export, and API discovery.

[package]
name = "soyuz-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP server for Soyuz procedural 3D asset generation"
keywords = ["mcp", "3d", "procedural", "sdf", "ai"]
categories = ["graphics", "game-development"]

[[bin]]
name = "soyuz-mcp"
path = "src/main.rs"

[dependencies]
# MCP SDK (protocol version 2025-11-25)
rmcp = { version = "0.8", features = ["server", "macros", "transport-io"] }

# Soyuz crates
soyuz-engine = { path = "../soyuz-engine" }
soyuz-script = { path = "../soyuz-script" }
soyuz-render = { path = "../soyuz-render" }
soyuz-core = { path = "../soyuz-core" }
soyuz-sdf = { path = "../soyuz-sdf" }

# Async runtime
tokio = { version = "1.41", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# JSON schema generation (required by rmcp for tool input schemas)
# Must use v1 to match rmcp's schemars version
schemars = "1.2"

# Image handling
image = { workspace = true }
base64 = "0.22"

# Math (for camera positioning)
glam = { workspace = true }

# GPU
wgpu = { workspace = true }

# Synchronization (parking_lot::Mutex is Send + Sync)
parking_lot = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging (stderr only for stdio transport)
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[lints]
workspace = true
